BACKEND: - Rename available drivers API endpoint - Split available vehicles API into available primary vehicles and available trailers - Add pagination for available drivers, primary vehicles and trailers
